<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".CadastroEmprestimoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/textViewItemEmprestado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/edtItemEmprestado"
            android:text="@string/item_emprestado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtItemEmprestado"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/qual_item_foi_emprestado"
            android:inputType="text|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewItemEmprestado" />

        <TextView
            android:id="@+id/textViewParaQuem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/spnAmigos"
            android:text="@string/para_quem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtItemEmprestado" />

        <Spinner
            android:id="@+id/spnAmigos"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toStartOf="@+id/btnIncluirAmigos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewParaQuem" />

        <Button
            android:id="@+id/btnIncluirAmigos"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/incluir_amigos"
            app:icon="@android:drawable/ic_input_add"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/spnAmigos"
            app:layout_constraintEnd_toStartOf="@+id/btnAmigos"
            app:layout_constraintTop_toTopOf="@+id/spnAmigos" />

        <Button
            android:id="@+id/btnAmigos"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/amigos"
            app:icon="@android:drawable/ic_menu_myplaces"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnIncluirAmigos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnIncluirAmigos" />

        <TextView
            android:id="@+id/textViewPrioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/prioridade_devolucao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnAmigos" />

        <RadioGroup
            android:id="@+id/rgbPrioridadeDevolucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/chkFragil"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrioridade">

            <RadioButton
                android:id="@+id/rdbBaixa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioridade_baixa" />

            <RadioButton
                android:id="@+id/rdbAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioridade_alta" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/chkFragil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/item_fragil"
            app:layout_constraintBottom_toBottomOf="@+id/rgbPrioridadeDevolucao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rgbPrioridadeDevolucao"
            app:layout_constraintTop_toTopOf="@+id/rgbPrioridadeDevolucao" />

        <TextView
            android:id="@+id/textViewDataEmprestimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_emprestimo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgbPrioridadeDevolucao" />

        <CheckBox
            android:id="@+id/chkDevolucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/devolucao_item"
            app:layout_constraintBottom_toBottomOf="@+id/textViewDataEmprestimo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewDataEmprestimo" />

        <EditText
            android:id="@+id/edtDataEmprestimo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/data_emprestimo"
            android:inputType="none"
            app:layout_constraintEnd_toStartOf="@+id/edtDataDevolucao"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataEmprestimo" />

        <EditText
            android:id="@+id/edtDataDevolucao"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/data_devolucao"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edtDataEmprestimo"
            app:layout_constraintTop_toTopOf="@+id/edtDataEmprestimo" />

        <TextView
            android:id="@+id/textViewObservacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/edtObservacoes"
            android:text="@string/observacoes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDataEmprestimo" />

        <EditText
            android:id="@+id/edtObservacoes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/observacoes"
            android:inputType="text|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewObservacoes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
