<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mniSalvar"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/salvar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mniLimpar"
        android:icon="@drawable/ic_action_clean"
        android:title="@string/limpar"
        app:showAsAction="ifRoom" />
</menu>