...
    <string name="item_emprestado">Borrowed item</string>
    <string name="para_quem">To whom?</string>
    <string name="limpar">Clear</string>
    <string name="salvar">Save</string>
    <string name="qual_item_foi_emprestado">Which item was borrowed?</string>
    <string name="as_entradas_foram_apagadas">The entries have been cleared!</string>
    <string name="campo_item_emprestado_nao_preenchido">Borrowed item field is not filled!</string>
    <string name="prioridade_devolucao">Return priority</string>
    <string name="prioridade_vazio">Empty</string>
    <string name="prioridade_baixa">Low</string>
    <string name="prioridade_alta">High</string>
    <string name="item_fragil">Is the item fragile?</string>
    <string name="observacoes">Additional remarks</string>
    <string name="nao_existem_amigos_cadastrados">No friends registered!</string>
    <string name="selecione_uma_prioridade_de_devolucao">Select a return priority!</string>
    <string name="layout_Item_emprestado">Borrowed item:</string>
    <string name="layout_nome_amigo">Name:</string>
    <string name="layout_prioridade_devolucao">Return priority:</string>
    <string name="layout_item_fragil">Fragile item?</string>
    <string name="layout_observacao">Remarks:</string>
    <string name="devolucao_item">Item returned?</string>
...
